// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test 1`] = `
<div
  className="MuiFormControl-root-01"
>
  <label
    className="MuiFormLabel-root-010 MuiFormLabel-filled-014 MuiInputLabel-root-05 MuiInputLabel-formControl-06 MuiInputLabel-animated-09 MuiInputLabel-shrink-08"
    data-shrink={true}
    htmlFor="interval"
  >
    Interval
  </label>
  <div
    className="MuiInput-root-022 MuiInput-formControl-023 MuiInput-underline-026"
  >
    <div
      className="MuiSelect-root-017"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-018 MuiSelect-selectMenu-019 MuiInput-input-030"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </div>
      <input
        id="interval"
        name="interval"
        type="hidden"
        value="type"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-035 MuiSelect-icon-021"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Test IntervalTypeSelector 1`] = `
<div
  className="MuiFormControl-root-3 IntervalTypeSelector-container-1"
>
  <label
    className="MuiFormLabel-root-14 MuiFormLabel-filled-18 MuiInputLabel-root-7 MuiInputLabel-formControl-8 MuiInputLabel-animated-11 MuiInputLabel-shrink-10"
    data-shrink={true}
    htmlFor="interval"
  >
    Interval
  </label>
  <div
    className="MuiInputBase-root-41 MuiInput-root-28 MuiInput-underline-32 MuiInputBase-formControl-42 MuiInput-formControl-29"
    onClick={[Function]}
  >
    <div
      className="MuiSelect-root-21"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-22 MuiSelect-selectMenu-25 MuiInputBase-input-51 MuiInput-input-36"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </div>
      <input
        name="interval"
        type="hidden"
        value="DATEOP"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-58 MuiSelect-icon-27"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;
